adjusted marble puzzle buttons to match marble pool buttons to avoid bleed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -817,13 +817,18 @@ input[type="checkbox"]:checked + .checkbox:before {
 }
 
 .marbleButton {
-  width: 7vw;
-  height: 7vw;
+  /* width: 7vw;
+  height: 7vw; */
   font-size: 4.5vw;
   color: black;
   cursor: pointer;
   background-color: white;
-  padding: 0;
+  /* padding: 0; */
+  border: none;
+  margin: 2px;
+  width: 6vw;
+  height: 6vw;
+  padding-top: 1px;
 }
 
 .lockedLetter {
@@ -899,7 +904,7 @@ input[type="checkbox"]:checked + .checkbox:before {
 }
 
 .blackHatContainer {
-  width: 41vw;
+  width: 42vw;
   /* margin-left: 5vw; */
 }
 
